Fix Discourse 2.2 issues

--- a/common/common.scss
+++ b/common/common.scss
@@ -23,4 +23,11 @@
   display: none;
 }
 
+// Header text/lock from gray to white
+.extra-info-wrapper span {
+  color: #fff;
+}
 
+.extra-info-wrapper svg {
+  fill: #fff;
+}
