--- a/common/common.scss
+++ b/common/common.scss
@@ -1,7 +1,7 @@
 // Header logos to pure white
 .d-header-icons .d-icon {
   opacity: 1;
-  color: #fff
+  color: #fff;
 }
 
 // Remove ADVERTISEMENT-labeld for DFP, AdSense
